feat(oidc): Oidc authentication support
Signed-off-by: deo002 <oberoidearsh@gmail.com>

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,10 @@ TOKEN_HOUR_LIFESPAN=24
 # Secret key to sign tokens (openssl rand -hex 32)
 API_SECRET=some-random-string
 READ_API_AUTHENTICATION_ENABLED=false
+
+# OIDC Provider
+CLIENT_ID=oidc-client-id
+CLIENT_SECRET=oidc-client-secret
+AUTH_URL=oidc-auth-url
+TOKEN_URL=oidc-token-url
+REDIRECT_URL=oidc-redirect-url
